Fixing mobile spacing.

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,9 @@ header h1 {
   align-items: center;
   min-height: 38rem;
 }
+
+@media (max-height : 700px) {
+  .flex-container {
+    min-height: 25rem;
+  }
+}
