--- a/src/assets/css/navigation.css
+++ b/src/assets/css/navigation.css
@@ -58,3 +58,9 @@ nav ul li {
         font-weight: normal;
     }
 }
+
+@media (max-height : 700px) {
+    #back_arrow {
+        margin-top: 3rem;
+    }
+}
